parslers-benchmark/src/tests/invalid/semanticErr/IO/readTypeErr.wacc
# attempt to read into a boolan variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = true ;
  read b ; 
  println b 
end
